--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yogi-client",
   "version": "0.1.0",
-  "homepage": "https://store.muhammadyogi.website/",
+  "homepage": "https://fullstacktes.muhammadyogi.website/",
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.10",
