--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yogi-client",
   "version": "0.1.0",
-  "homepage": "https://fullstacktes.muhammadyogi.website/",
+  "homepage": "https://client.muhammadyogi.website/",
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.10",
@@ -16,6 +16,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
+    "react-icons": "^4.7.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
